[package]
name = "pardalotus_chaser"
authors = ["Joe Wass <joe@afandian.com>"]
description = "Keep up to date with scholarly metadata indexed in Crossref."
readme = "README.md"
repository = "https://github.com/pardalotus/pardalotus_chaser"
license = "MIT"
keywords = ["metadata", "doi"]
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["max_level_debug"] }
logger = "0.4.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
retry = "2.0.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scholarly_identifiers = "0.2.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sha1 = "0.10.6"
time = { version = "0.3.36", features = ["parsing", "formatting"] }
